footer fixed again on mobile version

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -785,9 +785,10 @@ justify-content: center;
 }
 
 footer {
-  bottom: 0;
-
+  position: fixed;
+    bottom: 0;
 }
+
  footer a,
  footer p {
    font-size: 0.9rem;
